# strelka

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.txt  ChangeLog.txt  README.md  configure
docs/: README.md
docs/developerGuide/: README.md
docs/methods/: README.md
docs/userGuide/: README.md  deNovoQualityScore.md  errorAnalysis.md  germline.md  installation.md  quickStart.md  trainingGermlineEmpiricalScore.md  trainingSomaticEmpiricalScore.md
env/: Dockerfile  build_release.sh  jenkins_build_release.sh
redist/: CMakeLists.txt  CodeMin-1.0.2.tar.bz2  CodeMin-1.0.3.tar.bz2  CodeMin-1.0.4.tar.bz2  CodeMin-1.0.5.tar.bz2  README.md  README.txt  bgzf_extras-v0.1.tar.bz2  htslib-1.5-1-g03b35d2.tar.bz2  htslib-1.5.tar.bz2  jsoncpp-0.10.4.tar.bz2  pyflow-1.1.13.tar.bz2  pyflow-1.1.15.tar.bz2  pyflow-1.1.17.tar.bz2  pyflow-1.1.18.tar.bz2  rapidjson-1.1.0.tar.bz2  samtools-1.5.tar.bz2  tabix-0.2.5_new_libz_order.tar.bz2
scratch/: make_boost_subset.bash  make_release_tarball.bash  run_astyle.bash  todo
scratch/code_header_scripts/: new_header  reheader.pl  runit.bash
scratch/docker/: README.md
scratch/doxygen/: create_doxygen_output.bash  doxygen_config.txt
scratch/error_fitting/: Counter.py  README.md  dynamicCaseCounter.py  dynamicModel.py  dynamicModelAggregator.py  dynamicModelFlow.py  dynamicModelPlot.py  dynamicModelUtil.py  modelJsonGenerator.py  sandbox.py
scratch/git/: setupProjectGitHooks.bash
scratch/sandbox/: logSumSandbox.hh
scratch/statistics/: CandidateIndelStats.ipynb  PoissonApproximationToBinomial.docx
scratch/test/: run_nightly_starka_test.bash
scratch/util/: compareStrelkaGermlineVcfs.bash  compareStrelkaSomaticVcfs.bash  compressJson.py  mergeScoringModels.py  reFilterSomaticVcf.py  tocMaker.py
src/: CMakeLists.txt  Makefile  configure
src/c++/: CMakeLists.txt  Doxyfile.in  README.cxx.coordinates.txt
src/cmake/: boost.cmake  buildTimeConfigure.cmake  cxxCommon.cmake  cxxConfigure.cmake  cxxExecutable.cmake  cxxLibrary.cmake  cxxTestLibrary.cmake  getBuildTimeConfigInfo.cmake  getWorkflowVersion.cmake  globals.cmake  macros.cmake
src/config/: CMakeLists.txt  README.md  germlineVariantScoringModels.txt  indelDefaultParam.json  indelErrorModels.json  indel_models.json  model.json  somaticVariantScoringModels.json  strelka_config_bwa_default.ini  strelka_config_isaac_default.ini
src/config/empiricalVariantScoring/models/: RNAIndelScoringModels.json  RNASNVScoringModels.json  somaticIndelScoringModels.json  somaticSNVScoringModels.json  somaticVariantScoringModels.json
src/config/empiricalVariantScoring/schema/: empiricalScoringModelSchema.json
src/config/indelErrorModel/models/: IndelErrorModel.json  indelErrorModel.json  theta.json
src/config/indelErrorModel/schema/: indelErrorModelSchema.json
src/config/validate/: checkAllStrelkaModels.bash  validateJsonModelFromSchema.py
src/demo/: CMakeLists.txt  README.md  README.txt  runDenovoVariantWorkflowDemo.bash  runMitoWorkflowDemo.bash  runStarlingMitoWorkflowDemo.bash  runStarlingWorkflowDemo.bash  runStrelkaGermlineWorkflowDemo.bash  runStrelkaSomaticWorkflowDemo.bash  runStrelkaWorkflowDemo.bash  starlingDemoConfig.ini  strelkaDemoConfig.ini
src/demo/data/: CMakeLists.txt  NA12878_chrM_150_350.bam  NA12878_chrM_150_350.bam.bai  NA12878_chrM_200-200.bam.bai  NA12891_demo20.bam  NA12891_demo20.bam.bai  NA12892_demo20.bam  NA12892_demo20.bam.bai  NA12892_dupmark_chr20_region.bam  NA12892_dupmark_chr20_region.bam.bai  chrM_hg19.fa  demo20.fa  demo20.fa.fai
src/demo/dataMito/: NA12878_chrM_200-200.bam  chrM_hg19.fa.fai
src/markdown/: CMakeLists.txt  starlingUserGuide.md  strelkaContributorGuideVQSR.md  strelkaDeveloperGuide.md  strelkaUserGuide.md  strelkaUserGuideTrainingSomaticEmpiricalScore.md  strelkaVQSR.md
src/markdown/trainingSomaticEmpriicalScore/: Dockerfile
src/opt/: CMakeLists.txt
src/python/: CMakeLists.txt
src/python/deNovoQualityScore/: CMakeLists.txt  Dockerfile  denovo.py  requirements.txt  setup.cfg
src/python/deNovoQualityScore/data/: CMakeLists.txt
src/python/deNovoQualityScore/data/prior/: CMakeLists.txt  indel_lookup_auto.tsv  indel_lookup_xx.tsv  indel_lookup_xy.tsv  snv_lookup_auto.tsv  snv_lookup_xx.tsv  snv_lookup_xy.tsv
src/python/deNovoQualityScore/example/: CMakeLists.txt  strelka_inverted_trio_segment.vcf.gz.tbi
src/python/deNovoQualityScore/test/: test  test_denovo.py  test_requirements.txt
src/python/deNovoQualityScore/test/data/: PARv5.bed  denovo-chr1-200-snv-phased.vcf.gz.tbi  denovo-chr1-200-snv.ped  denovo-chr1-200-snv.vcf.gz.tbi  mutation-AT-minimal.vcf  mutation-AT-missing-DP.vcf  mutation-AT-missing-PL.vcf  mutation-AT.vcf  pedigree-sv-chr22.vcf.gz.tbi  spw-791.vcf.gz.tbi  spw-allosomes-male-proband.vcf.gz.tbi  spw1005-prior.vcf.gz.tbi  spw312-pedigree-chr22.vcf.gz.tbi  spw481-pl-misformatted.vcf.gz.tbi  spw542-cases.vcf.gz.tbi  spw588-par.vcf.gz.tbi  variants-strelka-five-fake-samples.vcf.gz.tbi  variants-strelka-slice.vcf.gz.tbi
src/python/scoringModelTraining/somatic/lib/evs/: CMakeLists.txt  __init__.py  somatic_rf.py  strelka_rf.py  strelka_rf_indel.py
src/python/scoringModelTraining/somatic/lib/evs/features/: PosAndAlleles.py  SomaticIndel.py  SomaticSNV.py  VcfFeatureSet.py  __init__.py
src/python/scoringModelTraining/somatic/lib/evs/tools/: __init__.py  bedintervaltree.py  vcf.py
src/python/somaticVQSRTraining/: CMakeLists.txt  README.md
src/python/somaticVQSRTraining/lib/: CMakeLists.txt  __init__.py  strelka_rf.py  strelka_rf_indel.py
src/python/somaticVQSRTraining/lib/features/: PosAndAlleles.py  StrelkaIndel.py  StrelkaSNV.py  __init__.py
src/python/somaticVQSRTraining/lib/tools/: __init__.py  bamstats.py  bedintervaltree.py  io.py  vcfextract.py
src/srcqc/: check_for_nonascii_source.bash  run_cppcheck.py
starka/: COPYRIGHT  Changelog  Makefile  README  test.txt
starka/data/: model.json
starka/redist/: Makefile  boost_1_44_0_subset.tar.bz2  samtools-0.1.14_no_tview.tar.bz2  samtools-0.1.18_no_tview.tar.bz2
starka/src/: Makefile  run_cppcheck.bash  run_cppcheck.py
(+1505 files in other folders)
